force-app/main/default/objects/Turf__c/Turf__c.object-meta.xml
<CustomObject>
    <description>This object stores information about all the turfs.</description>
    <label>Turf</label>
    <nameField>
        <label>Turf Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Turfs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>