force-app/main/default/objects/Turf__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This is turf location.</description>
    <label>Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>