force-app/main/default/objects/Turf__c/fields/Area_in_metre_square__c.field-meta.xml
<CustomField>
    <fullName>Area_in_metre_square__c</fullName>
    <label>Area in metre square</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>