force-app/main/default/objects/Turf__c/fields/Price_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Price_per_hour__c</fullName>
    <label>Price per hour</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>