force-app/main/default/objects/Turf__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Price_per_hour__c</columns>
    <columns>Area_in_metre_square__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>